--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 exceptiongroup==1.1.0
 frozenlist==1.3.3
-homeassistant-api==4.0.1
-git+https://github.com/hnefatl/HomeAssistantAPI@b9c094ba62565f3a23bd71d205a5094673da7850
+homeassistant-api @ git+https://github.com/hnefatl/HomeAssistantAPI@b9c094ba62565f3a23bd71d205a5094673da7850
 idna==3.4
 itsdangerous==2.1.2
 multidict==6.0.4
@@ -25,6 +24,7 @@ platformdirs==2.6.2
 pycares==4.3.0
 pycparser==2.21
 pydantic==1.9.0
+pygame==2.1.2
 python-forge==18.6.0
 requests==2.28.1
 requests-cache==0.9.7
